[gd_scene load_steps=36 format=3 uid="uid://ceqg4sr663xx2"]

[ext_resource type="Script" path="res://scenes/FinalStation/FinalStation.gd" id="1_ixfov"]
[ext_resource type="Texture2D" uid="uid://yfs1ito40fo4" path="res://assets/final_station/final_bg.png" id="2_10xh1"]
[ext_resource type="Script" path="res://scenes/FinalStation/finalcup.gd" id="3_fdyuf"]
[ext_resource type="Texture2D" uid="uid://bhs10ky3rsusa" path="res://assets/final_station/fullCookieCase.png" id="4_6l0m1"]
[ext_resource type="Texture2D" uid="uid://bc4d8sl6v755m" path="res://assets/liquid_station/assets/front_cup.png" id="4_hdwhh"]
[ext_resource type="Texture2D" uid="uid://bxpfb5nkcvbdp" path="res://assets/final_station/cookie.png" id="5_fly4n"]
[ext_resource type="Texture2D" uid="uid://21cd7rwmx4u3" path="res://assets/liquid_station/assets/back_cup.png" id="5_gn2qx"]
[ext_resource type="Script" path="res://scenes/FinalStation/cookie.gd" id="6_dke8q"]
[ext_resource type="Script" path="res://scenes/Toppings/liquid_inside_cup.gd" id="7_e7diu"]
[ext_resource type="Texture2D" uid="uid://cod1hk81g17u3" path="res://assets/buttons/normalBack.png" id="7_qudjk"]
[ext_resource type="Texture2D" uid="uid://c5nhvdg6r8njc" path="res://assets/buttons/pressedBack.png" id="8_0wbd3"]
[ext_resource type="Texture2D" uid="uid://bguwhgl51frim" path="res://assets/final_station/lid machine/lid machine close/Untitled_Artwork-5 51.png" id="8_td8il"]
[ext_resource type="Texture2D" uid="uid://ci7aa37fsuf7k" path="res://assets/buttons/hoverBack.png" id="9_d3pnv"]
[ext_resource type="Texture2D" uid="uid://da4ofainic75h" path="res://assets/final_station/lid machine/lid machine close/Untitled_Artwork-3 55.png" id="9_jm2cp"]
[ext_resource type="Texture2D" uid="uid://b663f8bqtgw7d" path="res://assets/buttons/normalNext.png" id="10_nsn8g"]
[ext_resource type="Texture2D" uid="uid://dndk45tkclobk" path="res://assets/final_station/lid machine/lid machine close/Untitled_Artwork-4 51.png" id="10_ofb81"]
[ext_resource type="Texture2D" uid="uid://cjhj7pjoqngfc" path="res://assets/final_station/lid.png" id="10_sw1nl"]
[ext_resource type="Texture2D" uid="uid://gw2radftsehp" path="res://assets/buttons/pressedNext.png" id="11_2cme3"]
[ext_resource type="Texture2D" uid="uid://xjwvvg8j3dv8" path="res://assets/liquid_station/animations/liquid-pouring/tea-2/Untitled_Artwork-7 4.png" id="11_fu6um"]
[ext_resource type="Texture2D" uid="uid://b41oecjf6pspk" path="res://assets/final_station/lid machine/lid machine close/Untitled_Artwork-6 50.png" id="11_yrg7s"]
[ext_resource type="Texture2D" uid="uid://vqsn6wx1oxr3" path="res://assets/buttons/hoverNext.png" id="12_2d1uf"]
[ext_resource type="Texture2D" uid="uid://46hk5lyxa5wi" path="res://assets/final_station/lid machine/lid machine open/lid_machine_bottom.png" id="18_0h5g6"]
[ext_resource type="Texture2D" uid="uid://bbnyrf5wrgce2" path="res://assets/final_station/lid machine/lid machine open/lid_machine_top.png" id="19_r3ofr"]
[ext_resource type="Texture2D" uid="uid://554nig4kbyt3" path="res://assets/final_station/lid machine/lid machine open/lid_machine_middle_back.png" id="20_n6xst"]
[ext_resource type="Texture2D" uid="uid://gyo466pymk15" path="res://assets/final_station/lid machine/lid machine open/lid_machine_middle_front.png" id="21_vcbix"]
[ext_resource type="Texture2D" uid="uid://brho2pav0ffva" path="res://assets/buttons/closeTrash.png" id="26_mnhwn"]
[ext_resource type="Texture2D" uid="uid://wtcxqp7v72p2" path="res://assets/buttons/normalOrder.png" id="27_a376f"]
[ext_resource type="Texture2D" uid="uid://ceini1vxcdf1f" path="res://assets/buttons/pressedOrder.png" id="28_44bcf"]
[ext_resource type="Texture2D" uid="uid://cap1aarokdn18" path="res://assets/buttons/hoverOrder.png" id="29_lctq5"]
[ext_resource type="Texture2D" uid="uid://cujo4it0fdse7" path="res://assets/buttons/close.png" id="30_m0gv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3fie"]
size = Vector2(244.5, 519.119)

[sub_resource type="GDScript" id="GDScript_14f8c"]
script/source = "extends StaticBody2D


# Called when the node enters the scene tree for the first time.
func _ready():
	modulate = Color(Color.MEDIUM_AQUAMARINE, 0.7)

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	#print(global_position)
	pass

func select():
	for child in get_tree().get_nodes_in_group(\"droppable\"):
		child.deselect()
	modulate = Color.BLUE

func deselect():
	modulate = Color.WHITE
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ioiw2"]
size = Vector2(255.034, 365.783)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ri56t"]
size = Vector2(367.809, 203.106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2k6q"]
size = Vector2(1047.66, 1447.97)

[node name="FinalStation" type="Node2D"]
position = Vector2(807, 450)
scale = Vector2(0.632565, 0.618355)
script = ExtResource("1_ixfov")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -1271.02
offset_top = -721.269
offset_right = 1258.98
offset_bottom = 814.731
scale = Vector2(0.996372, 0.940023)
texture = ExtResource("2_10xh1")
metadata/_edit_use_anchors_ = true

[node name="case" type="Sprite2D" parent="."]
position = Vector2(79.0432, 4.85161)
scale = Vector2(0.424686, 0.484817)
texture = ExtResource("4_6l0m1")

[node name="lid machine" type="Node2D" parent="."]

[node name="lid machine normal sprite" type="Sprite2D" parent="lid machine"]

[node name="bottom" type="Sprite2D" parent="lid machine/lid machine normal sprite"]
position = Vector2(-916.902, -166.571)
scale = Vector2(0.815218, 0.815218)
texture = ExtResource("18_0h5g6")

[node name="top" type="Sprite2D" parent="lid machine/lid machine normal sprite"]
position = Vector2(-913.74, -148.782)
scale = Vector2(0.774327, 0.774327)
texture = ExtResource("19_r3ofr")

[node name="LidMachineMiddleBack" type="Sprite2D" parent="lid machine/lid machine normal sprite"]
position = Vector2(-921.067, -190.405)
scale = Vector2(0.95, 0.95)
texture = ExtResource("20_n6xst")

[node name="LidMachineMiddleFront" type="Sprite2D" parent="lid machine/lid machine normal sprite"]
z_index = 15
position = Vector2(-920.063, -192.446)
scale = Vector2(0.95, 0.95)
texture = ExtResource("21_vcbix")

[node name="lid machine close sprite" type="Sprite2D" parent="lid machine"]
visible = false

[node name="bottom" type="Sprite2D" parent="lid machine/lid machine close sprite"]
position = Vector2(-916.902, -166.571)
scale = Vector2(0.815218, 0.815218)
texture = ExtResource("18_0h5g6")

[node name="top" type="Sprite2D" parent="lid machine/lid machine close sprite"]
z_index = 16
position = Vector2(-913.74, -148.782)
scale = Vector2(0.774327, 0.774327)
texture = ExtResource("8_td8il")

[node name="LidMachineMiddleBack" type="Sprite2D" parent="lid machine/lid machine close sprite"]
position = Vector2(-921.067, -190.405)
scale = Vector2(0.95, 0.95)
texture = ExtResource("9_jm2cp")

[node name="LidMachineMiddleFront" type="Sprite2D" parent="lid machine/lid machine close sprite"]
z_index = 15
position = Vector2(-920.063, -192.446)
scale = Vector2(0.95, 0.95)
texture = ExtResource("10_ofb81")

[node name="lid placer" type="Sprite2D" parent="lid machine/lid machine close sprite"]
z_index = 16
position = Vector2(-921.644, -205.384)
texture = ExtResource("11_yrg7s")

[node name="AttachLid" type="Area2D" parent="." groups=["droppable"]]
position = Vector2(-878.961, 35.5784)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttachLid"]
position = Vector2(1.58087, -3.23438)
shape = SubResource("RectangleShape2D_k3fie")

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2(79.0432, 4.85168)
scale = Vector2(0.424686, 0.484817)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-14.3201, -21.1833)
scale = Vector2(0.85105, 1.1066)
build_mode = 1
polygon = PackedVector2Array(-1734.69, -667.734, -1478.18, -768.636, 1512.96, -768.636, 1739.03, -661.798, 1695.56, 727.087, 1004.29, 694.443, -113.037, 694.443, -117.385, 296.77, -921.688, 270.061, -952.121, 302.706, -995.597, 359.092, -952.121, 715.216, -1695.56, 730.055, -1730.34, -641.024)

[node name="cookie" type="Sprite2D" parent="."]
visible = false
position = Vector2(55.3303, 48.5158)
scale = Vector2(0.167166, 0.157229)
texture = ExtResource("5_fly4n")
script = ExtResource("6_dke8q")

[node name="cup_spot" type="StaticBody2D" parent="." groups=["cup_drop", "droppable"]]
position = Vector2(-105, 88)
scale = Vector2(0.75, 0.75)
script = SubResource("GDScript_14f8c")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cup_spot"]
polygon = PackedVector2Array(-298.427, 477.794, -534.503, 708.514, -523.963, 753.795, 999.991, 753.795, 1008.42, 695.576, 753.376, 471.325)

[node name="cup" type="Node2D" parent="."]
position = Vector2(-105, 88)
scale = Vector2(0.75, 0.75)
script = ExtResource("3_fdyuf")

[node name="cup_sprite" type="Node2D" parent="cup"]

[node name="FrontCup" type="Sprite2D" parent="cup/cup_sprite"]
z_index = 5
position = Vector2(-18, 362)
scale = Vector2(0.641872, 0.641872)
texture = ExtResource("4_hdwhh")

[node name="BackCup" type="Sprite2D" parent="cup/cup_sprite"]
position = Vector2(-18, 362)
scale = Vector2(0.642054, 0.642054)
texture = ExtResource("5_gn2qx")

[node name="cup_pick_up" type="Area2D" parent="cup/cup_sprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cup/cup_sprite/cup_pick_up"]
position = Vector2(-18, 362)
scale = Vector2(0.641872, 0.641872)
polygon = PackedVector2Array(-291.8, -312.5, -290.6, -312.5, -284.5, -314.1, -284.5, -311.1, -277.4, -300.5, -276.1, -300.5, -256.1, -291.5, -251.3, -291.5, -151.1, -273.5, -149.4, -273.5, -107.3, -269.5, -87.5, -269.5, 60.5, -267.5, 60.5, -268.4, 147.5, -274.4, 147.5, -275.2, 246.5, -291.2, 246.5, -291.9, 271.5, -300.9, 279.4, -313.5, 284, -313.5, 288, -315.5, 291.4, -315.5, 303.5, -301.2, 303.5, -296.5, 304.6, -277.5, 302.6, -277.5, 290.5, -257.9, 290.5, -252.3, 269.5, -165.5, 269.5, -156.3, 228.5, 61.9, 228.5, 69.7, 204.2, 219.5, 203.2, 219.5, 177.1, 347.5, 175.6, 347.5, 166.6, 362.5, 165.2, 362.5, 142.2, 382.5, 140, 382.5, 98, 403.5, 93.8, 403.5, 48.8, 416.5, 39.5, 416.5, -23.5, 419.5, -23.5, 418.3, -73.5, 413.3, -73.5, 411.9, -127.5, 393.9, -127.5, 392.8, -143.5, 385.8, -143.5, 384.6, -161.5, 372.6, -161.5, 371.4, -173.5, 361.4, -173.5, 359.2, -183.5, 346.2, -183.5, 341.9, -210.5, 217.7, -210.5, 210.5, -238.2, 40.5, -239.1, 40.5, -262.5, -75.3, -262.5, -84.5, -275.2, -162.5, -276.1, -162.5, -296.2, -255.5, -297.2, -255.5, -298.2, -261.5, -310.5, -278.9, -310.5, -290, -298.5, -313, -298.5, -314.7, -296.3, -315.8)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="cup/cup_sprite/cup_pick_up"]
position = Vector2(-18.0866, 361.356)
scale = Vector2(0.642054, 0.642054)
polygon = PackedVector2Array(29.5, -374.4, 109.5, -370.4, 109.5, -369.3, 213.5, -355.2, 213.5, -354, 254.5, -342, 254.5, -340.8, 277.5, -329.8, 277.5, -328.4, 301.5, -307.4, 301.5, -304.2, 304.5, -300.2, 304.5, -288.5, 302.6, -288.5, 294.7, -274.5, 291.2, -274.5, 283, -291.8, 263.1, -279.5, 258.9, -279.5, 200.5, -268.8, 200.5, -268, 180.8, -262.5, 172.9, -262.5, 150.7, -257.5, 140.7, -257.5, 68.6, -251.5, -91.5, -251.5, -91.5, -252.7, -185.5, -262.7, -185.5, -264, -278.5, -286.9, -278.5, -288.4, -288.4, -294.2, -298.4, -274.2, -301.5, -274.9, -301.5, -277, -310.5, -289.9, -310.5, -300, -304.7, -311.5, -303.3, -311.5, -287.3, -327.5, -285.2, -327.5, -276.2, -334.5, -274, -334.5, -247, -347.5, -242.9, -347.5, -219.8, -355.5, -214.8, -355.5, -150.7, -366.5, -148.6, -366.5, -35.5, -374.4, -35.5, -375.5, 29.5, -375.5)

[node name="stuff_inside_cup" type="Node2D" parent="cup"]
script = ExtResource("7_e7diu")

[node name="Polygon2D" type="Polygon2D" parent="cup/stuff_inside_cup"]
clip_children = 1
position = Vector2(-20.1944, -56.9581)
scale = Vector2(0.997704, 0.997704)
polygon = PackedVector2Array(-172.754, 293.686, -109.358, 643.393, -87.1696, 665.461, -50.7168, 677.345, 9.5094, 684.135, 69.7357, 670.554, 109.358, 641.695, 155.32, 380.264, 172.754, 290.291, 182.264, 251.246, 191.773, 241.06, 185.915, 226.928, 145.774, 203.155, 76.056, 194.51, -14.7888, 190.187, -90.3395, 193.527, -158.49, 207.108, -191.773, 227.479)

[node name="toppings-5" type="Sprite2D" parent="cup/stuff_inside_cup/Polygon2D"]
position = Vector2(-7.55016, 213.472)
scale = Vector2(1.04942, 1.04942)

[node name="toppings-4" type="Sprite2D" parent="cup/stuff_inside_cup/Polygon2D"]
position = Vector2(4.53011, 267.261)
scale = Vector2(-0.996138, 1.08427)

[node name="toppings-3" type="Sprite2D" parent="cup/stuff_inside_cup/Polygon2D"]
position = Vector2(-4.53011, 342.901)

[node name="toppings-2" type="Sprite2D" parent="cup/stuff_inside_cup/Polygon2D"]
position = Vector2(9.06022, 403.413)
scale = Vector2(-0.88023, 1.01495)

[node name="toppings-1" type="Sprite2D" parent="cup/stuff_inside_cup/Polygon2D"]
position = Vector2(-4.5301, 485.776)
scale = Vector2(0.911684, 0.93467)

[node name="liquid_sprite" type="Sprite2D" parent="cup/stuff_inside_cup/Polygon2D"]
position = Vector2(-137.324, 224.767)
texture = ExtResource("11_fu6um")

[node name="Lid" type="Sprite2D" parent="cup"]
visible = false
position = Vector2(-22.3022, 158.668)
scale = Vector2(0.636206, 0.571847)
texture = ExtResource("10_sw1nl")

[node name="Back" type="TextureButton" parent="."]
offset_left = -1255.21
offset_top = 449.58
offset_right = -255.207
offset_bottom = 1449.58
scale = Vector2(0.32, 0.32)
texture_normal = ExtResource("7_qudjk")
texture_pressed = ExtResource("8_0wbd3")
texture_hover = ExtResource("9_d3pnv")
metadata/_edit_use_anchors_ = true

[node name="SubmitOrder" type="TextureButton" parent="."]
offset_left = 913.74
offset_top = 435.025
offset_right = 1913.74
offset_bottom = 1435.03
scale = Vector2(0.32, 0.323)
texture_normal = ExtResource("10_nsn8g")
texture_pressed = ExtResource("11_2cme3")
texture_hover = ExtResource("12_2d1uf")

[node name="InitialPos" type="Area2D" parent="."]
position = Vector2(-129.631, 363.869)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InitialPos"]
position = Vector2(3.16177, 4.57764e-05)
shape = SubResource("RectangleShape2D_ioiw2")

[node name="cookieSpot" type="Area2D" parent="."]
position = Vector2(268.747, 491.627)

[node name="CollisionShape2D" type="CollisionShape2D" parent="cookieSpot"]
position = Vector2(-1.58082, 6.46879)
shape = SubResource("RectangleShape2D_ri56t")

[node name="caseCollision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="caseCollision"]
polygon = PackedVector2Array(-550.141, -359.017, -458.451, -414.002, 630.765, -417.236, 714.551, -355.783, 695.581, 401.064, 30.0364, 399.447, 28.4556, 150.399, -281.394, 148.782, -279.813, 399.447, -543.818, 401.064)

[node name="trash" type="Sprite2D" parent="."]
position = Vector2(-641.831, 580.573)
scale = Vector2(0.169965, 0.191544)
texture = ExtResource("26_mnhwn")

[node name="trash" type="Area2D" parent="trash"]
scale = Vector2(1, 0.998819)

[node name="CollisionShape2D" type="CollisionShape2D" parent="trash/trash"]
position = Vector2(-8.56171, -17.5938)
shape = SubResource("RectangleShape2D_g2k6q")

[node name="TextureButton" type="TextureButton" parent="."]
auto_translate_mode = 1
visible = false
offset_left = 1029.14
offset_top = -698.628
offset_right = 1529.14
offset_bottom = 1.37225
scale = Vector2(0.344599, 0.37583)
texture_normal = ExtResource("27_a376f")
texture_pressed = ExtResource("28_44bcf")
texture_hover = ExtResource("29_lctq5")

[node name="order" type="Node2D" parent="."]
visible = false
z_index = 15

[node name="ColorRect" type="ColorRect" parent="order"]
auto_translate_mode = 1
offset_left = -342.339
offset_top = -507.584
offset_right = -302.339
offset_bottom = -467.584
scale = Vector2(18.0372, 25.3149)

[node name="Label" type="Label" parent="order"]
auto_translate_mode = 1
offset_left = -309.0
offset_top = -350.0
offset_right = 352.0
offset_bottom = 457.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
horizontal_alignment = 1

[node name="close" type="TextureButton" parent="."]
visible = false
z_index = 16
offset_left = 246.615
offset_top = -494.861
offset_right = 1746.61
offset_bottom = 1005.14
scale = Vector2(0.0744199, 0.0808258)
texture_normal = ExtResource("30_m0gv4")

[connection signal="input_event" from="AttachLid" to="cup" method="_on_attach_lid_input_event"]
[connection signal="input_event" from="Area2D" to="cookie" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="cookie" method="_on_area_2d_mouse_entered"]
[connection signal="body_entered" from="cup/cup_sprite/cup_pick_up" to="cup" method="_on_cup_pick_up_body_entered"]
[connection signal="body_exited" from="cup/cup_sprite/cup_pick_up" to="cup" method="_on_cup_pick_up_body_exited"]
[connection signal="input_event" from="cup/cup_sprite/cup_pick_up" to="cup" method="_on_cup_pick_up_input_event"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SubmitOrder" to="." method="_on_submit_order_pressed"]
[connection signal="input_event" from="InitialPos" to="cup" method="_on_initial_pos_input_event"]
[connection signal="input_event" from="cookieSpot" to="cookie" method="_on_cookie_spot_input_event"]
[connection signal="input_event" from="caseCollision" to="cookie" method="_on_case_collision_input_event"]
[connection signal="input_event" from="trash/trash" to="." method="_on_trash_input_event"]
[connection signal="mouse_entered" from="trash/trash" to="." method="_on_trash_mouse_entered"]
[connection signal="mouse_exited" from="trash/trash" to="." method="_on_trash_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
